# quotes

./: .env.example  AI_QUOTE_GENERATOR_README.md  Dockerfile  README.md  README_modular.md  config.py  docker.sh  im.py  image_generator.py  instaupload.py  main.py  models.py  pyproject.toml  quote_generator.py  requirements.txt  start_quote_generator.sh  test.py  test1.py  test_ai_quote.py  title.py  vid.py  video_generator.py
