[project]
name = "quotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-blob>=12.25.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastapi-mcp>=0.3.7",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
